feat: add Server Sent Events

--- a/test/ws.html
+++ b/test/ws.html
@@ -77,6 +77,7 @@
 
       ws.addEventListener("message", (event) => {
         const data = JSON.parse(event.data);
+        console.log("data", data);
         if (data.color) {
           const state = data.color;
           const counts = answers.map((color) =>
